--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,5 +4,6 @@ layout: default
 
 <div class="page">
   <h1 class="page-title">{{ page.title }}</h1>
+  {% if page.lead %}<p class="lead">{{ page.lead }}</p>{% endif %}
   {{ content }}
 </div>
