--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,7 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
+  {% if page.lead %}<p class="lead">{{ page.lead }}</p>{% endif %}
   <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
 </div>
