Make proper use of baseurl

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,7 +3,7 @@
     <img src="{{ site.author.photourl }}" alt="The author's github picture" class="sidebar-photo">
     <div class="sidebar-about">
       <h1>
-        <a href="{{ site.baseurl }}">
+        <a href="{{ site.url }}{{ site.baseurl }}">
           {{ site.title }}
         </a>
       </h1>
@@ -11,7 +11,7 @@
     </div>
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.title == "Blog" %} active{% endif %}" href="{{ site.baseurl }}">Blog</a>
+      <a class="sidebar-nav-item{% if page.title == "Blog" %} active{% endif %}" href="{{ site.url }}{{ site.baseurl }}">Blog</a>
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
